<resources>
    <string name="app_name">StayFit</string>
    <string name="undefined">Undefined</string>
    <string name="free">Free</string>
    <string name="rating">Rating</string>

    <string name="main_graphs">Progress Graphs</string>
    <string name="main_graphs_mass">Mass Gain</string>
    <string name="main_graphs_example">Example graph</string>
    <string name="main_graphs_bench_press">Bench Press</string>

    <string name="main_next_training">Next training %s</string>
    <string name="main_welcome">Welcome back, %s!</string>
    <string name="main_achievement">You do %d trainings in a row!</string>

    <string name="main_start_training">Start training now!</string>
    <string name="featured">Featured</string>
    <string name="personal_settings">My Parameters</string>
    <string name="excercise_browser">Excercise Browser</string>
    <string name="program_browser">Program Browser</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="personal_settings_title">Enter a little bit information about you</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="experience">Experience</string>
    <string name="my_goal">My Goal</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search_tooltip">Type what you want to find</string>
    <string name="home">Home</string>
    <string name="programs">Programs</string>
    <string name="exercises">Exercise</string>
    <string name="version_string">v 0.1 (2018.01)</string>
    <string name="about_text">StayFit is fitness application that aims to help you to training in gym. StayFit offers you sport diary functionality, contains many usefull sport programs from best athletes, exercise browser to know more about different exercises.</string>
    <string name="about_developers_title">Developers</string>
    <string name="developer_george"><![CDATA[George Popoff <popoff96@live.com>]]></string>
    <string name="developer_alex"><![CDATA[Alexey Komarov <comaralex>]]></string>
    <string name="developer_ilya"><![CDATA[Ilya Kirpichny <ilya>]]></string>
    <string name="copyright">Copyright 2018 © BreezeSoftware</string>
    <string name="contacts">Contacts</string>
    <string name="support_contacts"><![CDATA[Please, send all problems you found to this email: <popoff96@live.com>]]></string>
    <string name="difficulty_very_easy">Very Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_very_hard">Very Hard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="training">Training</string>
</resources>
